@@ -24,7 +24,7 @@ missing-slot-names</var>
 <a href="ref-glossary.html#gl:space-instance">space&nbsp;instances</a>) that has been saved to a file previously by
 <b><a href="ref-save-blackboard-repository.html">save-blackboard-repository</a></b>.
 </p>
-<p><table class="tight" width="100%">
+<p><span class="fndoclabel">Method signatures</span><table class="tight" width="100%">
 <tr valign="top">
 <td valign="baseline" align="left">
 <nobr>initialize-saved/sent-instance</nobr>
